17 setup authorization with spotify web api pt2 (#32)
* add general auth workflow, but it returns "invalid request" as of now.

* Configured auth workflow to supply token to the backend (no persistance yet)

* Address cors issues and refactor code
