# listify-backend/src/main/java/com/jatitoto/listify_backend/controller/AuthController.java
@@ -1,19 +1,27 @@
 package com.jatitoto.listify_backend.controller;
 
-import java.util.Objects;
-
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.jatitoto.listify.api.AuthApi;
+import com.jatitoto.listify_backend.service.SpotifyAuthService;
+
+import lombok.RequiredArgsConstructor;
 
 @RestController
+@RequiredArgsConstructor
+@CrossOrigin(origins = {"http://localhost:5173", "http://127.0.0.1:5173"}, allowCredentials = "true")
 public class AuthController implements AuthApi {
-	@Override
-	public ResponseEntity<String> initiateSpotifyLogin() {
-	return ResponseEntity.ok()
-		.contentType(Objects.requireNonNull(MediaType.TEXT_PLAIN))
-		.body("https://spotify.com");
-	}
+    private final SpotifyAuthService spotifyAuthService;
+
+    @Override
+    public ResponseEntity<String> initiateSpotifyLogin() {
+        return spotifyAuthService.initiateSpotifyLogin();
+    }
+
+    @Override
+    public ResponseEntity<Void> spotifyCallback(String code, String state, String error) {
+        return spotifyAuthService.handleSpotifyCallback(code, state, error);
+    }
 }
